<resources>
    <string name="app_name">Application pbl</string>

    <string name="main_text_view">予約</string>
    <string name="action_settings">Setting</string>
    <string name="linkText">コレカラダのホームページは<a href="https://corekarada.com/">こちら</a>から</string>
    
    <string name="app_name">TestCountDownTimer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="tv_stamp">Stamp Screen</string>
    <string name="tv_timer">Timer Screen</string>
    <string name="tv_booking">Booking Screen</string>
    <string name="tv_point">スタンプ：</string>
    <string name="tv_ticket">チケット：</string>
    <string name="button_stamp">スタンプ</string>
    <string name="button_charge">スタンプをためる</string>
    <string name="button_use">チケットを使う</string>
    <string name="button_timer">運動時間</string>
    <string name="button_booking">予約</string>
</resources>
