<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:onClick="onClickButton"
        android:text="@string/main_text_view"
        android:textSize="50sp"
        app:backgroundTint="#ff0006"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:strokeColor="#010203" />

    <TextView
        android:id="@+id/linkText"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:text="@string/linkText"
        android:textSize="30sp"
        android:clickable="true"
        android:onClick="onClickURL"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
     <TextView
        android:id="@+id/booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_booking"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/button_stamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStamp"
            android:text="@string/button_stamp"
            android:textColor="@color/white"
            android:backgroundTint="@color/midnightblue"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickTimer"
            android:text="@string/button_timer"
            android:textColor="@color/white"
            android:backgroundTint="@color/midnightblue"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_booking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_booking"
            android:textColor="@color/white"
            android:backgroundTint="@color/royalblue"
            style="?android:attr/buttonBarButtonStyle" />
   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
