<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StampActivity">

    <TextView
        android:id="@+id/stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_stamp"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/stamp_inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_inc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_stamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_stamp"
            android:backgroundTint="@color/royalblue"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickTImer"
            android:text="@string/button_timer"
            android:backgroundTint="@color/midnightblue"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_booking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBooking"
            android:text="@string/button_booking"
            android:backgroundTint="@color/midnightblue"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>